--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,7 @@
+<% provide(:title, "Help") %>
+
+<title> <%=yield(:title) %>  | Ruby on Rails Tutorial Sample App</title>
+</head>
+<body>
 <h1>StaticPages#help</h1>
 <p>Find me in app/views/static_pages/help.html.erb</p>
